<resources>
    <string name="app_name">KaierUtils</string>
    <string name="header_about_title">О программе</string>
    <string name="header_general_title">Общее</string>
	<string name="header_reverse_title">Задний ход</string>
	<string name="header_sleep_wakeup_title">Sleep mode/WakeUp</string>
	<string name="header_poweramp_title">PowerAmp</string>
	<string name="header_radio_title">Радио</string>
	<string name="header_dynamic_volume_title">Динамическая громкость</string>
	<string name="header_obd_settings_title">Настройки OBD</string>
	<string name="header_popup_title">Всплывающее окно</string>
	<string name="menu_general_show_notification_icon_title">Иконка статуса</string>
	<string name="menu_general_auto_start">Показывать главное окно при включении</string>
	<string name="menu_general_hide_header">Скрывать заголовок окна</string>
	<string name="menu_general_color_speed_title">Цветная скорость</string>
	<string name="menu_general_show_statistics_title">Отображать статистику</string>
	<string name="menu_general_show_eq_title">Отображать данные эквалайзера под громкостью</string>
	<string name="menu_general_show_gps_satellities_title">Отображать данные о спутниках GPS</string>
	<string name="menu_general_show_buttons_title">Отображать кнопки Radio и Music</string>
	<string name="menu_general_show_clock_title">Отображать часы</string>
	<string name="menu_general_show_clock_summary">При включенной опции отображения информации PowerAmp или Radio, долгий тап по обложке альбома или по иконке радио переключает режим отображения часов и обратно </string>
	<string name="menu_general_clock_size_title">Размер часов</string>
	<string name="menu_general_clock_size_summary">Текущее значение %1$d</string>
	<string name="menu_general_show_eq_summary">Под громкостью отображаются уровни низких, средних, высоких частот</string>
	<string name="menu_category_reverse_fixed_volume">Фиксированный уровень громкости</string>
	<string name="menu_category_reverse_percent_volume">Относительный уровень громкости</string>
	<string name="menu_reverse_change_volume_title">Уменьшать громкости при включении ЗХ</string>
	<string name="menu_reverse_fixed_volume_available_title">Уменьшение громкости до уровня</string>
	<string name="menu_reverse_fixed_volume_available_summary">Имеет приоритет над относительным уровнем</string>
	<string name="menu_reverse_fixed_volume_level_title">Уровень громкости</string>
	<string name="menu_reverse_fixed_volume_level_summary">Текущее значение %1$d</string>
	<string name="menu_reverse_fixed_volume_level_dialog">Выберите уровень громкости (от 1 до 10)</string>
	<string name="menu_reverse_percent_volume_available_title">Уменьшение громкости на процент</string>
	<string name="menu_reverse_percent_volume_available_summary">Не работает при включенном фиксированном уровне</string>
	<string name="menu_reverse_percent_volume_level_title">Процент уменьшения</string>
	<string name="menu_reverse_percent_volume_level_summary">Текущее значение %1$d </string>
	<string name="menu_reverse_percent_volume_level_dialog">Введите процент уменьшения</string>
	<string name="menu_category_startup_change_volume">Громкость при включении устройства</string>
	<string name="menu_startup_volume_change_title">Изменять громкость при запуске</string>
	<string name="menu_startup_volume_level_title">Уровень громкости</string>
	<string name="menu_startup_volume_level_summary">Текущее значение %1$d</string>
	<string name="menu_startup_volume_level_dialog">Выберите уровень громкости (от 1 до 10) </string>
	<string name="menu_category_wakeup_change_volume">Громкость при просыпании устройства</string>
	<string name="menu_wakeup_volume_change_title">Изменять громкость при просыпании</string>
	<string name="menu_wakeup_volume_level_title">Уровень громкости</string>
	<string name="menu_wakeup_volume_level_summary">Текущее значение %1$d</string>
	<string name="menu_wakeup_volume_level_dialog">Выберите уровень громкости (от 1 до 10) </string>
	<string name="menu_poweramp_interaction_title">Взаимодействовать с PowerAmp</string>
	<string name="menu_poweramp_show_toast_title">Показывать тоаст с информацией о треке</string>
	<string name="menu_poweramp_show_toast2_title">Не показывать тоаст, когда KaierUtils активно</string>
	<string name="menu_poweramp_show_music_info_title">Отображать информацию о треке в главном окне</string>
	<string name="menu_poweramp_watch_sleep_title">Ставить на паузу при уходе в sleep</string>
	<string name="menu_poweramp_watch_wakeup_title">Начинать воспроизведение при просыпании</string>
	<string name="menu_poweramp_wakeup_start_delay_title">Задержка включения воспроизведения</string>
	<string name="menu_poweramp_wakeup_start_delay_summary">PowerAmp будет запущен с задержкой после просыпания (через %1$d мсек)</string>
	<string name="menu_poweramp_wakeup_start_delay_dialog">Укажите значение (мсек)</string>
	<string name="menu_poweramp_watch_bootup_title">Начинать воспроизведение при включении</string>
	<string name="menu_poweramp_watch_bootup_delay_title">Задержка включения воспроизведения</string>
	<string name="menu_poweramp_watch_bootup_delay_summary">PowerAmp будет запущен с задержкой после включения (через %1$d мсек)</string>
	<string name="menu_poweramp_watch_bootup_delay_dialog">Укажите значение (мсек)</string>
	<string name="menu_poweramp_watch_longpress_category">Переключение каталогов кнопками руля</string>
	<string name="menu_poweramp_watch_longpress_next_title">Переключать на следующий каталог</string>
	<string name="menu_poweramp_watch_longpress_next_summary">Отслеживание долгого нажатия кнопки переключения "вперед" на руле</string>
	<string name="menu_poweramp_watch_longpress_next_code_title">Код события</string>
	<string name="menu_poweramp_watch_longpress_next_code_summary">Обычно 22, но если не работает, то попробуйте 19</string>
	<string name="menu_poweramp_watch_longpress_prev_title">Переключать на предыдущий каталог</string>
	<string name="menu_poweramp_watch_longpress_prev_summary">Отслеживание долгого нажатия кнопки переключения "назад" на руле</string>
	<string name="menu_poweramp_watch_longpress_prev_code_title">Код события</string>
	<string name="menu_poweramp_watch_longpress_prev_code_summary">Обычно 23, но если не работает, то попробуйте 18</string>
	<string name="menu_radio_show_toast_title">Всплывающее окно при переключении радиостанций</string>
	<string name="menu_radio_skip_seeking_mode_title">Не показывать при поиске радиостанций</string>
	<string name="menu_radio_show_info_title">Отображать информацию о радио на главном экране</string>
	<string name="menu_radio_show_toast_2_title">Не отображать всплывающее окно при активном главном экране</string>
	<string name="menu_category_toasts_radio_title">Radio toast</string>
	<string name="menu_category_toasts_music_title">Music toast</string>
	<string name="menu_radio_toast_text1_size_title">Размер текста в строке 1</string>
	<string name="menu_radio_toast_text2_size_title">Размер текста в строке 2</string>
	<string name="menu_music_toast_text1_size_title">Размер текста в строке 1</string>
	<string name="menu_music_toast_text2_size_title">Размер текста в строке 2</string>
	<string name="menu_music_toast_picture_width_title">Ширина картинки</string>
	<string name="menu_music_toast_picture_height_title">Высота картинки</string>
    <string name="menu_obd_use_obd">Подключаться к адаптеру OBD (ELM 327)</string>
	<string name="menu_item_fixed_volume_level_at_startup_title">Уровень громкости</string>
	<string name="fixed_volume_level_at_startup_summary">Текущее значение %1$d</string>
	<string name="fixed_volume_level_at_startup_dialog">Выберите уровень громкости (от 1 до 10)</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_dynamic_sound_settings">Динамическое изменение громкости</string>
    <string name="sound_settings_title">Дополнительные настройки звука</string>
    <string name="text_device_name">Устройство %1$s</string>
    <string name="text_reverse_count">Задний ход включался %1$d раз(а)</string>
    <string name="text_sleep_mode_count">SleepMode сработал %1$d раз(а)</string>
    <string name="text_sleep_mode_last_time">последний раз в %1$s</string>
    <string name="text_statistic_title">Статистика с момента включения:</string>
    <string name="text_working_start">Работает с %1$s</string>
    <string name="text_gps_speed_value">%1$d</string>
    <string name="text_gps_track_time">%1$s</string>
    <string name="text_gps_track_time_null">--</string>
    <string name="text_gps_track_time_format">HH:mm:ss</string>
    <string name="text_gps_track_time_format_min">м</string>
    <string name="text_gps_track_time_format_hour">ч</string>
    <string name="text_gps_track_time_format_sec">с</string>
    <string name="menu_agps_reset_title">Сброс GPS</string>
    <string name="dsc_available">Включить динамическое изменение громкости</string>
    <string name="dsc_firstspeed_title">Минимальная скорость</string>
    <string name="dsc_firstspeed_summary">Значение минимальной скорости, при которой динамически начнет изменяться громкость (текущее значение %1$d)</string>
    <string name="dsc_firstspeed_dialogtitle">Выберите минимальную скорость</string>
    <string name="dsc_stepspeed_title">Шаг изменения скорости</string>
    <string name="dsc_stepspeed_summary">Шаг изменения скорости, при котором срабатывает динамическое изменение громкости (текущее значение %1$d)</string>
    <string name="dsc_stepspeed_dialogtitle">Выберите интервал скорости</string>
    <string name="dsc_stepvolume_title">Шаг изменения громкости</string>
    <string name="dsc_stepvolume_summary">Шаг изменения громкости, на который измениться громкость (текущее значение %1$d)</string>
    <string name="dsc_stepvolume_dialogtitle">Выберите шаг громкости</string>
    <string name="dsc_time_to_change_title">Время срабатывания (сек)</string>
    <string name="dsc_time_to_change_summary">Время, через которое сработает изменение громкости, если скорость вышла из интервала погрешности (текущее значение %1$d)</string>
    <string name="dsc_time_to_change_dialogtitle">Выберите время срабатывания</string>
    <string name="dsc_delta_to_change_title">Дельта срабатывания (км/ч)</string>
    <string name="dsc_delta_to_change_summary">Дельта скорости, внутри которой не сработает изменение громкости (текущее значение %1$d)</string>
    <string name="dsc_delta_to_change_dialogtitle">Выберите дельту скорости</string>
    <string name="text_obd2_settings">OBD 2</string>
	<string name="text_gps_distance">%1$.2f</string>
    <string name="text_average_speed">Avg: %1$s км/ч</string>
    <string name="text_max_speed">Max: %1$s км/ч</string>
	<string name="title_activity_floating">Floating Activity</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_obdii">OBDII информация</string>
    <string name="odbii_device_name">Устройство: %1$s</string>
    <string name="odbii_device_status">Статус: %1$s</string>
    <string name="odbii_select_device">Устройство</string>
    <string name="btnOBDConnect">Подключить</string>
    <string name="btnOBDDisconnect">Отключить</string>
    <string name="text_obd_speed">Скорость: %1$s</string>
	<string name="text_obd_speed_f">%1$s</string>
    <string name="text_obd_engine_rpm">Обороты двигателя: %1$s</string>
	<string name="text_obd_engine_rpm_f">%1$s</string>
    <string name="text_obd_coolant_temp">Температура охл. жид.: %1$s</string>
	<string name="text_obd_coolant_temp_f">%1$s</string>
	<string name="text_obd_fuel_usage">Потрачено топлива (л):</string>
	<string name="text_obd_fuel_usage_f">%1$.3f</string>
    <string name="text_obd_cmu_voltage">Напряжение: %1$s</string>
	<string name="text_obd_cmu_voltage_f">%1$s</string>
    <string name="text_obd_use">Bluetooth OBD (ELM327)</string>
    <string name="text_obd_fuel_consumption_lph"> (л/ч): %1$.1f</string>
	<string name="text_obd_fuel_consumption_lph_f">%1$.1f л/ч</string>
</resources>