<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:seekbar="http://schemas.android.com/apk/res/ru.d51x.kaierutils"
	>
	<SwitchPreference
		android:key="CAR_SETTINGS__VOLUME_AT_REVERSE__DO_CHANGE"
		android:title="@string/menu_reverse_change_volume_title"
		android:defaultValue="false"
	/>
	<PreferenceCategory android:title="@string/menu_category_reverse_fixed_volume">
		<CheckBoxPreference
			android:key="CAR_SETTINGS__VOLUME_AT_REVERSE__FIXED_LEVEL_AVAILABLE"
			android:title="@string/menu_reverse_fixed_volume_available_title"
			android:summary="@string/menu_reverse_fixed_volume_available_summary"
			android:defaultValue="false"
			android:dependency="CAR_SETTINGS__VOLUME_AT_REVERSE__DO_CHANGE"
			/>

		<ru.d51x.kaierutils.SeekBarPreference
			android:key="CAR_SETTINGS__VOLUME_AT_REVERSE__FIXED_LEVEL"
			android:title="@string/menu_reverse_fixed_volume_level_title"
			android:summary="@string/menu_reverse_fixed_volume_level_summary"
			android:dialogTitle="@string/menu_reverse_fixed_volume_level_dialog"
			android:defaultValue="4"
			android:dependency="CAR_SETTINGS__VOLUME_AT_REVERSE__FIXED_LEVEL_AVAILABLE"
			seekbar:maxValue="8"
			seekbar:minValue="1"
			/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/menu_category_reverse_percent_volume">
		<CheckBoxPreference
			android:key="CAR_SETTINGS__VOLUME_AT_REVERSE__PERCENTAGE_LEVEL_AVAILABLE"
			android:title="@string/menu_reverse_percent_volume_available_title"
			android:summary="@string/menu_reverse_percent_volume_available_summary"
			android:defaultValue="false"
			android:dependency="CAR_SETTINGS__VOLUME_AT_REVERSE__DO_CHANGE"
		/>

		<ru.d51x.kaierutils.SeekBarPreference
			android:key="CAR_SETTINGS__VOLUME_AT_REVERSE__PERCENTAGE_LEVEL"
			android:title="@string/menu_reverse_percent_volume_level_title"
			android:summary="@string/menu_reverse_percent_volume_level_summary"
			android:dialogTitle="@string/menu_reverse_percent_volume_level_dialog"
			android:defaultValue="30"
			android:dependency="CAR_SETTINGS__VOLUME_AT_REVERSE__PERCENTAGE_LEVEL_AVAILABLE"
			seekbar:maxValue="100"
			seekbar:minValue="10"
		/>
	</PreferenceCategory>
</PreferenceScreen>
