<?xml version="1.0" encoding="utf-8"?>
<preference-headers
	xmlns:android="http://schemas.android.com/apk/res/android">
	<header
		android:fragment="ru.d51x.kaierutils.SettingsGeneralFragment"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/header_general_title">
	</header>
	<header
		android:fragment="ru.d51x.kaierutils.SettingsReverseFragment"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/header_reverse_title">
	</header>
	<header
		android:fragment="ru.d51x.kaierutils.SettingsSleepWakeUpFragment"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/header_sleep_wakeup_title">
	</header>
	<header
		android:fragment="ru.d51x.kaierutils.SettingsPowerAmpFragment"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/header_poweramp_title">
	</header>
	<header
		android:fragment="ru.d51x.kaierutils.SettingsRadioFragment"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/header_radio_title">
	</header>
	<header
		android:fragment="ru.d51x.kaierutils.SettingsDynamicVolumeFragment"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/header_dynamic_volume_title">
	</header>
	<header
		android:fragment="ru.d51x.kaierutils.SettingsPopupFragment"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/header_popup_title">
	</header>
</preference-headers>