<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:seekbar="http://schemas.android.com/apk/res/ru.d51x.kaierutils"
	>

	<SwitchPreference   android:key="CAR_SETTINGS__RADIO_SHOW_TOAST"
	                    android:title="@string/menu_radio_show_toast_title"
	                    android:defaultValue="false"
		/>

	<CheckBoxPreference   android:key="CAR_SETTINGS__RADIO_SKIP_SEEKING_MODE"
	                    android:title="@string/menu_radio_skip_seeking_mode_title"
	                    android:defaultValue="true"
	                    android:dependency="CAR_SETTINGS__RADIO_SHOW_TOAST"
		/>


    <CheckBoxPreference   android:key="CAR_SETTINGS__RADIO_SHOW_INFO"
                          android:title="@string/menu_radio_show_info_title"
                          android:defaultValue="false"
                          android:dependency="CAR_SETTINGS__RADIO_SHOW_TOAST"
        />
<!--
    <CheckBoxPreference   android:key="CAR_SETTINGS__RADIO_SHOW_TOAST_2"
                          android:title="@string/menu_radio_show_toast_2_title"
                          android:defaultValue="true"
                          android:dependency="CAR_SETTINGS__RADIO_SHOW_INFO"
        />
-->
</PreferenceScreen>
